# learning-fastapi

./: .gitignore  README.md  dicas-para-o-front.txt  ex01.py  ex02.py  ex03.py  ex05.py  ex06.py  execute.py  modelagem-de-dados.txt  pyproject.toml  reforçar.txt  test.py
aula01/: modelagem-de-dados.txt
aula01/exercises/: ex02.py  ex03.py  ex04.py  ex05.py  main.py
aula02/: ex01-pydantic.py  ex02-schemas.py  ex03-schemas-recursos.py  ex04-schemas-input.py  ex05-schemas-output.py  models.py
aula02/exercises/api-cadastro-de-carros/: README.md  main.py  models.py  pyproject.toml  schemas.py
aula02/exercises/api-cadastro-de-pessoas/: README.md  main.py  models.py  pyproject.toml  schemas.py
aula02/exercises/api-de-cadastro-de-usuarios/: main.py  models.py  schemas.py
aula03/: db.py  main.py  models.py  revisao.py  schemas.py
aula07/task-api/: .env  docker-compose.yml  pyproject.toml
aula07/task-api/src/: config.py  db.py  main.py  models.py  schemas.py  security.py
aula07/task-api/src/migrations/: env.py
aula07/task-api/src/migrations/versions/: 432d6cc5ee66_alterando_coluna_email_para_ser_unica.py  8338ec20fdb7_criando_tabela_de_usuarios.py
