[project]
name = "aula-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "tinydb>=4.8.2",
]

[tool.uv.workspace]
members = ["aula02/exercises/api-cadastro-de-pessoas", "aula02/exercises/api-cadastro-de-carros", "aula07/task-api"]
